Fixed Alignment on Settings Items

--- a/discorddark.theme.css
+++ b/discorddark.theme.css
@@ -368,8 +368,13 @@ h2.name-3l27Hl, h2.membersGroup-v9BXpm {
 	margin-left: 0
 }
 .sidebarRegion-VFTUkN {
-	flex: 1 0 0px;
+	flex: 1 0 0;
+	max-width: 210px;
 }
-.contentColumn-2hrIYH {
-	max-width: 1000px;
+.contentRegion-3nDuYy {
+    flex: 1 1 100%
+}
+.contentColumn-2hrIYH, .customColumn-Rb6toI, .customScroller-26gWhv>div, .exampleModal-2X2Vf8, .contentWidth-xLB44s, .stickersHero-rhTlUd,
+.notificationSettings-1NQKPR {
+	max-width: 100%;
 }
